add new chat route
