# openapi.yaml
@@ -145,7 +145,7 @@ paths:
                   username: "test_username"
                   picture: "http://localhost:5001/image/profile.jpg"
                 isProfileCompleted: true
-                notifications: []
+                notifications: "..."
 
   /profile/update:
     get:
@@ -215,3 +215,19 @@ paths:
       responses:
         "200":
           description: Profile updated
+
+  /chat/new:
+    post:
+      parameters:
+        - $ref: "#/components/parameters/BearerAuth"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            example:
+              targetUserId: 5
+      responses:
+        "201":
+          description: Created
+        "403":
+          description: Forbidden
